Bug 51179 - FILESAVE cannot save file as .ppt
Summary: FILESAVE cannot save file as .ppt
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Master old -3.6
Hardware: All All
: high critical
Assignee: Korrawit Pruegsanusak
URL:
Whiteboard: target:3.7.0 target:3.6.0.1
Keywords: regression
: 51073 (view as bug list)
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2012-06-17 13:37 UTC by Pradeep
Modified: 2016-09-05 06:50 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Error message i am getting while saving file. (133.65 KB, image/png)
2012-06-17 13:37 UTC, Pradeep
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Pradeep 2012-06-17 13:37:07 UTC
Created attachment 63148 [details]
Error message i am getting while saving file.

I am facing a issue with Libreoffice Impress files. When i have created any new file and try to save it on any location in my computer with any name using .ppt extension i get an error "Error saving the document Untitled 1:Write error. File could not be written."

While when i save it with other extension like .odp it done perfectly.
Comment 1 Korrawit Pruegsanusak 2012-06-23 22:35:25 UTC
Thanks for the bug report.

[REPRODUCIBLE] on Windows XP with Master Daily Build,
from tinderbox Win-x86@6-fast, pull time 2012-04-24 22:15:22,
git core: 52d90ce040234cb35fad03bdd12e201bfa3a8634

Saving as .odp and .pptx don't have this problem.
Comment 2 Korrawit Pruegsanusak 2012-06-24 00:08:31 UTC
l@vbox64:~/bibisect-3.6-20120428$ git bisect log
git bisect start
# bad: [aa062d7ec36c69c1aff1abf994a90c5f0987c5be] source-hash-d50f02bec4a70bd26a518e4e76f4a876454ab937
git bisect bad aa062d7ec36c69c1aff1abf994a90c5f0987c5be
# good: [bba31ba417672c6f185a6875c813677e8ac44c86] source-hash-9a8d7e2a3f41f9e1c39c5634714a3a2b21776670
git bisect good bba31ba417672c6f185a6875c813677e8ac44c86
# good: [631e1335e3a9629152a2a4cb0f99304248299eb0] source-hash-bd6310886dc4351a8ac3ed3ee9a4f65d2a0e005c
git bisect good 631e1335e3a9629152a2a4cb0f99304248299eb0
# good: [904babc296329c93373e5b21b4652e836898a932] source-hash-eab7e131ecebe4cdefcdcb1ad176bbdce83cb467
git bisect good 904babc296329c93373e5b21b4652e836898a932
# good: [240f93c3fad8ebf74ddac842eeae300347b8d27e] source-hash-212c18430864f110e5a3549c0279b1a2ea4bb6bd
git bisect good 240f93c3fad8ebf74ddac842eeae300347b8d27e
# bad: [9398a9184d1acaf725a794ecb67fa5819507157e] source-hash-fd58025dc7379126738cf73908ec10e809348e6a
git bisect bad 9398a9184d1acaf725a794ecb67fa5819507157e
# bad: [b6908bcbf28e066ff4fe73b5e5c40875326f838b] source-hash-61d78aca81f08ac3a0f9eb65799d04d56fbad312
git bisect bad b6908bcbf28e066ff4fe73b5e5c40875326f838b
# good: [4b0b89469006c312360dc786d5be3bef99706055] source-hash-5553dfe2060cb4a02a827c9774a60e4408d20c33
git bisect good 4b0b89469006c312360dc786d5be3bef99706055
Comment 4 Rainer Bielefeld Retired 2012-06-26 23:42:48 UTC
[Reproducible] with server-installation of Master "LOdev 3.6.0alpha1+  – WIN7 Home Premium (64bit) ENGLISH UI [Build ID: bfa9061]" (tinderbox: Win-x86@6-fast, pull time 2012-06-02 23:56:11)

Worked fine with 
 with Server installation of Master "LOdev 3.6.0alpha0+  – WIN7 Home Premium (64bit) ITALIAN UI [Build ID: 7175cee]" (tinderbox: Win-x86@6-fast, pull time 2012-05-16 22:07:37)

Really very new regression
Comment 5 Rainer Bielefeld Retired 2012-06-26 23:45:16 UTC
*** Bug 51073 has been marked as a duplicate of this bug. ***
Comment 6 SkBuff 2012-07-02 13:14:32 UTC
[REPRODUCIBLE] on Kubuntu 12.04 with LO v3.6.0.0.beta2 (Build ID: 360m1(Build:12)).

Also reproducible via command-line (not sure if it is the same bug):

$ soffice -convert-to ppt -outdir /tmp/ /tmp/Test.odp
convert /tmp/Test.odp -> /tmp//Test.ppt using MS PowerPoint 97
Error: Please reverify input parameters...
Comment 7 SkBuff 2012-07-03 09:52:50 UTC
It is not working with python-uno either. Again, not sure if it is the same bug but it seems so (ErrorCodeIOException).

$ unoconv -f ppt Test.odp
unoconv: UnoException during conversion in <class '__main__.com.sun.star.task.ErrorCodeIOException'>: 
ERROR: The provided document cannot be converted to the desired format. (code: 3088)
3088

--> Kubuntu 12.04 with LO v3.6.0.0.beta2 (Build ID: 360m1(Build:12)))
Comment 8 Korrawit Pruegsanusak 2012-07-08 02:30:42 UTC
After more git bisect, this is first bad commit:
http://cgit.freedesktop.org/libreoffice/core/commit/?id=8adec08d56a9ad46d3550e43b115e916c4cf783f

The change:

- .SearchAscii() != STRING_NOTFOUND
+ .match()

is not equivalent. SearchAscii() can find substring, while match() can't.
See http://wiki.documentfoundation.org/Development/String_Classes for more info.

I'm taking this bug.
Comment 9 Korrawit Pruegsanusak 2012-07-08 03:27:26 UTC
Change submitted and waiting for review at https://gerrit.libreoffice.org/264

This solved problem saving from new blank presentation document. I didn't check whether it solved comment 6 and comment 7.
Comment 10 Not Assigned 2012-07-10 12:47:44 UTC
Korrawit Pruegsanusak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8089502118d3fe53007e95ff2ca87077c1fb3eab

fdo#51179: SearchAscii() is equal to indexOf(), not match()
Comment 11 Not Assigned 2012-07-10 14:09:46 UTC
Korrawit Pruegsanusak committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7119c94f78f8160ee502fc4277bdaaf0b5ddf138&g=libreoffice-3-6

fdo#51179: SearchAscii() is equal to indexOf(), not match()


It will be available in LibreOffice 3.6.
Comment 12 SkBuff 2012-07-10 17:08:57 UTC
I can confirm the patch solved both comment 6 and comment 7. Tested in both latest master (3.7.0.0.alpha0 build c0bf2f4) and "libreoffice-3-6" branch (3.6.0.0.beta3 build 00d453b).