fdo#51179: SearchAscii() is equal to indexOf(), not match()

regression from 8adec08d56a9ad46d3550e43b115e916c4cf783f

Change-Id: Ic1c3160be1c61162f6a62a7e14c4efb7bedccdcc